--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,9 @@
 # Refer to https://github.com/mkdocs/mkdocs/blob/master/mkdocs.yml for a working example
-site_name: Ethereum Smart Contract Best Practices
-site_url: https://consensys.github.io/smart-contract-best-practices/
-site_description: Ethereum Smart Contract Security Best Practices
-site_author: ConsenSys Diligence
-repo_url: https://github.com/ConsenSys/smart-contract-best-practices
+site_name: 스마트 컨트랙트 개발 모범 사례
+site_url: https://kr-blockchain.github.io/smart-contract-best-practices/
+site_description: 스마트 컨트랙트 개발 모범 사례 사이트
+site_author: 한국 스마트 컨트랙트 개발자 모임
+repo_url: https://github.com/kr-blockchain/smart-contract-best-practices
 repo_name: Github
 remote_branch: gh-pages
 remote_name: origin
@@ -126,19 +126,19 @@ extra_css:
 
 extra:
   social:
-    - icon: fontawesome/solid/shield-alt
-      link: https://consensys.net/diligence/blog/
-    - icon: fontawesome/brands/github
-      link: https://github.com/ConsenSys/
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/ConsenSysAudits
-    - icon: fontawesome/brands/medium
-      link: https://medium.com/consensys-diligence
-    - icon: fontawesome/brands/youtube
-      link: https://www.youtube.com/channel/UCkoGLA5DUdXO4Qfo_9RDjIA/playlists
+    # - icon: fontawesome/solid/shield-alt
+    #   link: https://consensys.net/diligence/blog/
+    # - icon: fontawesome/brands/github
+    #   link: https://github.com/ConsenSys/
+    # - icon: fontawesome/brands/twitter
+    #   link: https://twitter.com/ConsenSysAudits
+    # - icon: fontawesome/brands/medium
+    #   link: https://medium.com/consensys-diligence
+    # - icon: fontawesome/brands/youtube
+    #   link: https://www.youtube.com/channel/UCkoGLA5DUdXO4Qfo_9RDjIA/playlists
   analytics:
-    provider: google
-    property: UA-64552723-12
+    # provider: google
+    # property: UA-64552723-12
 
 markdown_extensions:
   - toc:
